home-k8s/apps/hass/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
spec:
  tls:
    - hosts:
        - hass.sigurs.io
      secretName: hass-tls
  rules:
    - host: hass.sigurs.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hass
              port:
                name: http
    - host: meshtastic.sigurs.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: meshtastic-proxy
              port:
                name: meshtastic-proxy
