home-k8s/apps/hass/overlays/prod/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-to-local-resources
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        # network: home-iot
        - ipBlock:
            cidr: 172.20.3.0/24
        # host: router
        - ipBlock:
            cidr: 172.20.4.1/32
        # host: zibgee gateway
        - ipBlock:
            cidr: 172.20.4.19/32
        # host: home-k8s01
        - ipBlock:
            cidr: 172.20.4.20/32
        # host: home-srv02
        - ipBlock:
            cidr: 172.20.4.116/32
    - to:
        - ipBlock:
            cidr: 172.20.4.10/32
      ports:
        # wyoming-faster-whisper
        - protocol: TCP
          port: 10300
